Fixed blockquote margin on mobile.

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -273,6 +273,9 @@ margin-top: 0;
  ul{
    font-size:17px;
  }
+ blockquote{
+margin-left:0px; 
+}
  .big{
    font-size:20px;
  }
